Improved Native Ad Layouts

--- a/app/src/main/res/layout/ad_banner_settings.xml
+++ b/app/src/main/res/layout/ad_banner_settings.xml
@@ -14,16 +14,17 @@
         android:focusable="true"
         android:paddingVertical="12dp">
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/tapsell_nativead_logo"
-            android:layout_width="26dp"
-            android:layout_height="26dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:layout_marginStart="12dp"
-            android:contentDescription="@string/warranties_list_ad_logo_content_description"
+            android:background="@color/navyBlue10"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5" />
+            app:layout_constraintVertical_bias="0.5"
+            app:shapeAppearance="@style/Theme.WarrantyRoster.ImageViewShapeAppearance.Settings" />
 
         <TextView
             android:id="@+id/tapsell_nativead_title"
