--- a/app/src/main/res/layout/list_ad_banner.xml
+++ b/app/src/main/res/layout/list_ad_banner.xml
@@ -13,17 +13,18 @@
         android:clickable="true"
         android:focusable="true">
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/tapsell_nativead_logo"
             android:layout_width="52dp"
             android:layout_height="52dp"
             android:layout_marginStart="12dp"
             android:layout_marginTop="12dp"
             android:layout_marginBottom="12dp"
-            android:contentDescription="@string/warranties_list_ad_logo_content_description"
+            android:background="@color/grayLight"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearance="@style/Theme.WarrantyRoster.ImageViewShapeAppearance" />
 
         <TextView
             android:id="@+id/tapsell_nativead_title"
