--- a/app/src/main/res/layout/ad_banner_list_applovin.xml
+++ b/app/src/main/res/layout/ad_banner_list_applovin.xml
@@ -6,48 +6,48 @@
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
     android:clickable="true"
-    android:focusable="true"
-    android:paddingVertical="12dp">
+    android:focusable="true">
 
     <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/iv_banner_icon"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:id="@+id/iv_banner_list_icon"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
         android:layout_marginStart="12dp"
-        android:background="@color/navyBlue10"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="12dp"
+        android:background="@color/grayLight"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5"
-        app:shapeAppearance="@style/Theme.WarrantyRoster.ImageViewShapeAppearance.Settings" />
+        app:shapeAppearance="@style/Theme.WarrantyRoster.ImageViewShapeAppearance" />
 
     <TextView
-        android:id="@+id/tv_banner_title"
+        android:id="@+id/tv_banner_list_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="12dp"
         android:ellipsize="end"
-        android:fontFamily="@font/nunito_semi_bold"
+        android:fontFamily="@font/nunito_bold"
         android:gravity="center_vertical|start"
         android:maxLines="1"
         android:text="Xeniac Dev"
         android:textAlignment="gravity"
-        android:textColor="@color/black"
+        android:textColor="@color/navyBlue"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_banner_body"
-        app:layout_constraintEnd_toStartOf="@+id/tv_banner_advertiser"
-        app:layout_constraintStart_toEndOf="@+id/iv_banner_icon"
+        app:layout_constraintBottom_toTopOf="@+id/tv_banner_list_body"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/iv_banner_list_icon"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5"
         app:layout_constraintVertical_chainStyle="packed"
         tools:ignore="HardcodedText" />
 
     <TextView
-        android:id="@+id/tv_banner_body"
+        android:id="@+id/tv_banner_list_body"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="12dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="12dp"
         android:ellipsize="end"
         android:fontFamily="@font/nunito_regular"
         android:gravity="center_vertical|start"
@@ -57,18 +57,18 @@
         android:textColor="@color/grayDark"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/tv_banner_advertiser"
-        app:layout_constraintStart_toEndOf="@+id/iv_banner_icon"
-        app:layout_constraintTop_toBottomOf="@+id/tv_banner_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/iv_banner_list_icon"
+        app:layout_constraintTop_toBottomOf="@+id/tv_banner_list_title"
         tools:ignore="HardcodedText" />
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tv_banner_advertiser"
+        android:id="@+id/tv_banner_list_advertiser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
-        android:background="@drawable/shape_rounded_status"
-        android:backgroundTint="@color/navyBlue20"
+        android:background="@drawable/shape_rounded_ad_indicator"
+        android:backgroundTint="@color/blue20"
         android:ellipsize="end"
         android:fontFamily="@font/nunito_black"
         android:gravity="center"
@@ -78,12 +78,10 @@
         android:text="@string/warranties_list_ad_indicator"
         android:textAlignment="gravity"
         android:textAllCaps="true"
-        android:textColor="@color/navyBlue"
+        android:textColor="@color/blue"
         android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5"
         app:textAllCaps="true"
         tools:ignore="SmallSp" />
 
