--- a/app/src/main/res/layout/ad_banner_list_applovin.xml
+++ b/app/src/main/res/layout/ad_banner_list_applovin.xml
@@ -16,6 +16,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginBottom="12dp"
         android:background="@color/grayLight"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
