--- a/app/src/main/res/layout/ad_banner_settings_tapsell.xml
+++ b/app/src/main/res/layout/ad_banner_settings_tapsell.xml
@@ -20,6 +20,7 @@
             android:layout_height="32dp"
             android:layout_marginStart="12dp"
             android:background="@color/navyBlue10"
+            android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
