--- a/app/src/main/res/layout/fragment_warranties.xml
+++ b/app/src/main/res/layout/fragment_warranties.xml
@@ -71,7 +71,7 @@
         android:layout_marginTop="8dp"
         android:fontFamily="@font/nunito_semi_bold"
         android:gravity="center"
-        android:text="@string/network_error_failure"
+        android:text="@string/error_network_failure"
         android:textAlignment="gravity"
         android:textColor="@color/grayDark"
         android:textSize="16sp"
@@ -91,7 +91,7 @@
         android:layout_marginTop="3dp"
         android:layout_marginBottom="3dp"
         android:gravity="center"
-        android:text="@string/network_error_retry"
+        android:text="@string/error_btn_retry"
         android:textAlignment="gravity"
         android:textColor="@color/blue"
         app:layout_constraintBottom_toBottomOf="parent"
