Add Change Email Page Landscape Mode

--- a/app/src/main/res/layout-land/fragment_change_email.xml
+++ b/app/src/main/res/layout-land/fragment_change_email.xml
@@ -44,7 +44,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingBottom="24dp">
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_title_password"
@@ -144,7 +145,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="44dp"
                 android:layout_marginTop="24dp"
-                android:layout_marginBottom="24dp"
                 android:text="@string/change_email_btn_change"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
