Add Change Email Page Landscape Mode

--- a/app/src/main/res/layout-land/fragment_change_email.xml
+++ b/app/src/main/res/layout-land/fragment_change_email.xml
@@ -35,6 +35,7 @@
         android:layout_height="0dp"
         android:fillViewport="true"
         android:orientation="vertical"
+        android:overScrollMode="never"
         android:scrollbars="none"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
