Add Dimensions Resource File

--- a/app/src/main/res/drawable-land/shape_rounded_landing.xml
+++ b/app/src/main/res/drawable-land/shape_rounded_landing.xml
@@ -5,7 +5,7 @@
     <solid android:color="@color/background" />
 
     <corners
-        android:bottomLeftRadius="40dp"
-        android:topLeftRadius="40dp" />
+        android:bottomLeftRadius="@dimen/radius_40dp"
+        android:topLeftRadius="@dimen/radius_40dp" />
 
 </shape>
