--- a/app/src/main/res/layout-land/activity_landing.xml
+++ b/app/src/main/res/layout-land/activity_landing.xml
@@ -13,7 +13,7 @@
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/iv_header"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="@dimen/height_0dp"
             android:adjustViewBounds="true"
             android:alpha="0.80"
             android:rotationY="180"
@@ -29,13 +29,13 @@
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp"
+            android:layout_margin="@dimen/margin_12dp"
             android:fontFamily="@font/nunito_black"
             android:gravity="start|center_vertical"
             android:text="@string/login_text_title"
             android:textAlignment="gravity"
             android:textColor="@color/whiteConstant"
-            android:textSize="34sp"
+            android:textSize="@dimen/text_size_34sp"
             app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toTopOf="@+id/iv_header"
             app:layout_constraintEnd_toStartOf="@+id/fcv"
@@ -45,10 +45,10 @@
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fcv"
             android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="@dimen/width_0dp"
+            android:layout_height="@dimen/height_0dp"
             android:background="@drawable/shape_rounded_landing"
-            android:elevation="4dp"
+            android:elevation="@dimen/elevation_4dp"
             app:defaultNavHost="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
