--- a/app/src/main/res/layout/ad_banner_list_applovin.xml
+++ b/app/src/main/res/layout/ad_banner_list_applovin.xml
@@ -8,10 +8,10 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_banner_list_action"
         style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="@dimen/width_0dp"
+        android:layout_height="@dimen/height_0dp"
         android:background="?attr/selectableItemBackground"
-        android:elevation="10dp"
+        android:elevation="@dimen/elevation_10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,10 +19,10 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_banner_list_icon"
-        android:layout_width="52dp"
-        android:layout_height="52dp"
-        android:layout_marginVertical="12dp"
-        android:layout_marginStart="12dp"
+        android:layout_width="@dimen/width_52dp"
+        android:layout_height="@dimen/height_52dp"
+        android:layout_marginVertical="@dimen/margin_12dp"
+        android:layout_marginStart="@dimen/margin_12dp"
         android:background="@color/grayLight"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,9 +32,9 @@
 
     <TextView
         android:id="@+id/tv_banner_list_title"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/width_0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="12dp"
+        android:layout_marginHorizontal="@dimen/margin_12dp"
         android:ellipsize="end"
         android:fontFamily="@font/nunito_bold"
         android:gravity="center_vertical|start"
@@ -42,7 +42,7 @@
         android:text="Xeniac Dev"
         android:textAlignment="gravity"
         android:textColor="@color/navyBlue"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_16sp"
         app:layout_constraintBottom_toTopOf="@+id/tv_banner_list_body"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -53,10 +53,10 @@
 
     <TextView
         android:id="@+id/tv_banner_list_body"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/width_0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="12dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginHorizontal="@dimen/margin_12dp"
+        android:layout_marginTop="@dimen/margin_12dp"
         android:ellipsize="end"
         android:fontFamily="@font/nunito_regular"
         android:gravity="center_vertical|start"
@@ -64,7 +64,7 @@
         android:text="We are a software production team"
         android:textAlignment="gravity"
         android:textColor="@color/grayDark"
-        android:textSize="12sp"
+        android:textSize="@dimen/text_size_12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -82,13 +82,13 @@
         android:fontFamily="@font/nunito_black"
         android:gravity="center"
         android:maxLines="1"
-        android:paddingHorizontal="4dp"
-        android:paddingVertical="2dp"
+        android:paddingHorizontal="@dimen/padding_4dp"
+        android:paddingVertical="@dimen/padding_2dp"
         android:text="@string/warranties_list_ad_indicator"
         android:textAlignment="gravity"
         android:textAllCaps="true"
         android:textColor="@color/blue"
-        android:textSize="10sp"
+        android:textSize="@dimen/text_size_10sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:textAllCaps="true"
