--- a/app/src/main/res/layout/ad_banner_list_tapsell.xml
+++ b/app/src/main/res/layout/ad_banner_list_tapsell.xml
@@ -15,11 +15,11 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/tapsell_nativead_logo"
-            android:layout_width="52dp"
-            android:layout_height="52dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginBottom="12dp"
+            android:layout_width="@dimen/width_52dp"
+            android:layout_height="@dimen/height_52dp"
+            android:layout_marginStart="@dimen/margin_12dp"
+            android:layout_marginTop="@dimen/margin_12dp"
+            android:layout_marginBottom="@dimen/margin_12dp"
             android:background="@color/grayLight"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -29,9 +29,9 @@
 
         <TextView
             android:id="@+id/tapsell_nativead_title"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/width_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="12dp"
+            android:layout_marginHorizontal="@dimen/margin_12dp"
             android:ellipsize="end"
             android:fontFamily="@font/nunito_bold"
             android:gravity="center_vertical|start"
@@ -39,7 +39,7 @@
             android:text="Xeniac Dev"
             android:textAlignment="gravity"
             android:textColor="@color/navyBlue"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_size_16sp"
             app:layout_constraintBottom_toTopOf="@+id/tapsell_nativead_description"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -50,10 +50,10 @@
 
         <TextView
             android:id="@+id/tapsell_nativead_description"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/width_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="12dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginHorizontal="@dimen/margin_12dp"
+            android:layout_marginTop="@dimen/margin_12dp"
             android:ellipsize="end"
             android:fontFamily="@font/nunito_regular"
             android:gravity="center_vertical|start"
@@ -61,7 +61,7 @@
             android:text="We are a software production team"
             android:textAlignment="gravity"
             android:textColor="@color/grayDark"
-            android:textSize="12sp"
+            android:textSize="@dimen/text_size_12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -79,13 +79,13 @@
             android:fontFamily="@font/nunito_black"
             android:gravity="center"
             android:maxLines="1"
-            android:paddingHorizontal="4dp"
-            android:paddingVertical="2dp"
+            android:paddingHorizontal="@dimen/padding_4dp"
+            android:paddingVertical="@dimen/padding_2dp"
             android:text="@string/warranties_list_ad_indicator"
             android:textAlignment="gravity"
             android:textAllCaps="true"
             android:textColor="@color/blue"
-            android:textSize="10sp"
+            android:textSize="@dimen/text_size_10sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:textAllCaps="true"
