--- a/app/src/main/res/drawable/shape_rounded_ad_indicator.xml
+++ b/app/src/main/res/drawable/shape_rounded_ad_indicator.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <corners
-        android:bottomLeftRadius="12dp"
-        android:topRightRadius="12dp" />
+        android:bottomLeftRadius="@dimen/radius_12dp"
+        android:topRightRadius="@dimen/radius_12dp" />
 
 </shape>
