--- a/app/src/main/res/layout/ad_banner_settings_applovin.xml
+++ b/app/src/main/res/layout/ad_banner_settings_applovin.xml
@@ -8,10 +8,10 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_banner_action"
         style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="@dimen/width_0dp"
+        android:layout_height="@dimen/height_0dp"
         android:background="?attr/selectableItemBackground"
-        android:elevation="10dp"
+        android:elevation="@dimen/elevation_10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,10 +19,10 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_banner_icon"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_marginVertical="12dp"
-        android:layout_marginStart="12dp"
+        android:layout_width="@dimen/width_32dp"
+        android:layout_height="@dimen/height_32dp"
+        android:layout_marginVertical="@dimen/margin_12dp"
+        android:layout_marginStart="@dimen/margin_12dp"
         android:background="@color/navyBlue10"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -33,10 +33,10 @@
 
     <TextView
         android:id="@+id/tv_banner_title"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/width_0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="12dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginHorizontal="@dimen/margin_12dp"
+        android:layout_marginTop="@dimen/margin_12dp"
         android:ellipsize="end"
         android:fontFamily="@font/nunito_semi_bold"
         android:gravity="center_vertical|start"
@@ -44,7 +44,7 @@
         android:text="Xeniac Dev"
         android:textAlignment="gravity"
         android:textColor="@color/black"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_16sp"
         app:layout_constraintBottom_toTopOf="@+id/tv_banner_body"
         app:layout_constraintEnd_toStartOf="@+id/tv_banner_advertiser"
         app:layout_constraintStart_toEndOf="@+id/iv_banner_icon"
@@ -55,11 +55,11 @@
 
     <TextView
         android:id="@+id/tv_banner_body"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/width_0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="12dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginHorizontal="@dimen/margin_12dp"
+        android:layout_marginTop="@dimen/margin_4dp"
+        android:layout_marginBottom="@dimen/margin_12dp"
         android:ellipsize="end"
         android:fontFamily="@font/nunito_regular"
         android:gravity="center_vertical|start"
@@ -67,7 +67,7 @@
         android:text="We are a software production team"
         android:textAlignment="gravity"
         android:textColor="@color/grayDark"
-        android:textSize="12sp"
+        android:textSize="@dimen/text_size_12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tv_banner_advertiser"
         app:layout_constraintStart_toEndOf="@+id/iv_banner_icon"
@@ -78,20 +78,20 @@
         android:id="@+id/tv_banner_advertiser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
+        android:layout_marginEnd="@dimen/margin_12dp"
         android:background="@drawable/shape_rounded_status"
         android:backgroundTint="@color/navyBlue20"
         android:ellipsize="end"
         android:fontFamily="@font/nunito_black"
         android:gravity="center"
         android:maxLines="1"
-        android:paddingHorizontal="4dp"
-        android:paddingVertical="2dp"
+        android:paddingHorizontal="@dimen/padding_4dp"
+        android:paddingVertical="@dimen/padding_2dp"
         android:text="@string/warranties_list_ad_indicator"
         android:textAlignment="gravity"
         android:textAllCaps="true"
         android:textColor="@color/navyBlue"
-        android:textSize="10sp"
+        android:textSize="@dimen/text_size_10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
