--- a/app/src/main/res/layout/ad_banner_settings_tapsell.xml
+++ b/app/src/main/res/layout/ad_banner_settings_tapsell.xml
@@ -16,9 +16,9 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/tapsell_nativead_logo"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginStart="12dp"
+            android:layout_width="@dimen/width_32dp"
+            android:layout_height="@dimen/height_32dp"
+            android:layout_marginStart="@dimen/margin_12dp"
             android:background="@color/navyBlue10"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -29,9 +29,9 @@
 
         <TextView
             android:id="@+id/tapsell_nativead_title"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/width_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="12dp"
+            android:layout_marginHorizontal="@dimen/margin_12dp"
             android:ellipsize="end"
             android:fontFamily="@font/nunito_semi_bold"
             android:gravity="center_vertical|start"
@@ -39,7 +39,7 @@
             android:text="Xeniac Dev"
             android:textAlignment="gravity"
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_size_16sp"
             app:layout_constraintBottom_toTopOf="@+id/tapsell_nativead_description"
             app:layout_constraintEnd_toStartOf="@+id/tapsell_nativead_sponsored"
             app:layout_constraintStart_toEndOf="@+id/tapsell_nativead_logo"
@@ -50,10 +50,10 @@
 
         <TextView
             android:id="@+id/tapsell_nativead_description"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/width_0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="@dimen/margin_4dp"
             android:ellipsize="end"
             android:fontFamily="@font/nunito_regular"
             android:gravity="center_vertical|start"
@@ -61,7 +61,7 @@
             android:text="We are a software production team"
             android:textAlignment="gravity"
             android:textColor="@color/grayDark"
-            android:textSize="12sp"
+            android:textSize="@dimen/text_size_12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/tapsell_nativead_sponsored"
             app:layout_constraintHorizontal_bias="0.5"
@@ -73,20 +73,20 @@
             android:id="@+id/tapsell_nativead_sponsored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="12dp"
+            android:layout_marginEnd="@dimen/margin_12dp"
             android:background="@drawable/shape_rounded_status"
             android:backgroundTint="@color/navyBlue20"
             android:ellipsize="end"
             android:fontFamily="@font/nunito_black"
             android:gravity="center"
             android:maxLines="1"
-            android:paddingHorizontal="4dp"
-            android:paddingVertical="2dp"
+            android:paddingHorizontal="@dimen/padding_4dp"
+            android:paddingVertical="@dimen/padding_2dp"
             android:text="@string/warranties_list_ad_indicator"
             android:textAlignment="gravity"
             android:textAllCaps="true"
             android:textColor="@color/navyBlue"
-            android:textSize="10sp"
+            android:textSize="@dimen/text_size_10sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
