--- a/app/src/main/res/layout/ad_container_list.xml
+++ b/app/src/main/res/layout/ad_container_list.xml
@@ -9,11 +9,11 @@
         android:id="@+id/cv_ad_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="8dp"
-        android:layout_marginVertical="4dp"
+        android:layout_marginHorizontal="@dimen/margin_8dp"
+        android:layout_marginVertical="@dimen/margin_4dp"
         android:visibility="gone"
         app:cardBackgroundColor="@color/surface"
-        app:cardCornerRadius="12dp"
+        app:cardCornerRadius="@dimen/radius_12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
