--- a/app/src/main/res/layout/fragment_change_email.xml
+++ b/app/src/main/res/layout/fragment_change_email.xml
@@ -7,10 +7,10 @@
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
         style="@style/Theme.WarrantyRoster.Toolbar"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/width_0dp"
         android:layout_height="?attr/actionBarSize"
-        app:contentInsetEnd="12dp"
-        app:contentInsetStart="12dp"
+        app:contentInsetEnd="@dimen/content_inset_12dp"
+        app:contentInsetStart="@dimen/content_inset_12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -18,8 +18,8 @@
         app:title="@string/change_email_text_title" />
 
     <ScrollView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="@dimen/width_0dp"
+        android:layout_height="@dimen/height_0dp"
         android:orientation="vertical"
         android:overScrollMode="ifContentScrolls"
         android:scrollbars="none"
@@ -34,10 +34,10 @@
 
             <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/lav_keyboard"
-                android:layout_width="250dp"
-                android:layout_height="250dp"
-                android:layout_marginHorizontal="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_width="@dimen/width_250dp"
+                android:layout_height="@dimen/height_250dp"
+                android:layout_marginHorizontal="@dimen/margin_8dp"
+                android:layout_marginTop="@dimen/margin_8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -47,10 +47,10 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_title_password"
-                android:layout_width="0dp"
+                android:layout_width="@dimen/width_0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="32dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginHorizontal="@dimen/margin_32dp"
+                android:layout_marginTop="@dimen/margin_8dp"
                 android:fontFamily="@font/nunito_bold"
                 android:gravity="start|center_vertical"
                 android:labelFor="@+id/ti_layout_password"
@@ -58,7 +58,7 @@
                 android:text="@string/change_email_title_password"
                 android:textAlignment="gravity"
                 android:textColor="@color/black"
-                android:textSize="14sp"
+                android:textSize="@dimen/text_size_14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/lav_keyboard" />
@@ -66,10 +66,10 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/ti_layout_password"
                 style="@style/Theme.WarrantyRoster.TextInputLayout"
-                android:layout_width="0dp"
+                android:layout_width="@dimen/width_0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="24dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginHorizontal="@dimen/margin_24dp"
+                android:layout_marginTop="@dimen/margin_4dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_title_password"
@@ -87,16 +87,16 @@
                     android:maxLines="1"
                     android:textColorHint="@color/grayDark"
                     android:textDirection="ltr"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/text_size_16sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_title_new_email"
-                android:layout_width="0dp"
+                android:layout_width="@dimen/width_0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="32dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginHorizontal="@dimen/margin_32dp"
+                android:layout_marginTop="@dimen/margin_8dp"
                 android:fontFamily="@font/nunito_bold"
                 android:gravity="start|center_vertical"
                 android:labelFor="@+id/ti_layout_new_email"
@@ -104,7 +104,7 @@
                 android:text="@string/change_email_title_new_email"
                 android:textAlignment="gravity"
                 android:textColor="@color/black"
-                android:textSize="14sp"
+                android:textSize="@dimen/text_size_14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ti_layout_password" />
@@ -112,10 +112,10 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/ti_layout_new_email"
                 style="@style/Theme.WarrantyRoster.TextInputLayout"
-                android:layout_width="0dp"
+                android:layout_width="@dimen/width_0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="24dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginHorizontal="@dimen/margin_24dp"
+                android:layout_marginTop="@dimen/margin_4dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_title_new_email">
@@ -132,18 +132,18 @@
                     android:maxLines="1"
                     android:textColorHint="@color/grayDark"
                     android:textDirection="ltr"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/text_size_16sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_change_email"
                 style="@style/Theme.WarrantyRoster.Button"
-                android:layout_width="0dp"
+                android:layout_width="@dimen/width_0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="24dp"
-                android:layout_marginTop="40dp"
-                android:layout_marginBottom="24dp"
+                android:layout_marginHorizontal="@dimen/margin_24dp"
+                android:layout_marginTop="@dimen/margin_40dp"
+                android:layout_marginBottom="@dimen/margin_24dp"
                 android:text="@string/change_email_btn_change"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
