--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--Width-->
+    <dimen name="width_0dp">0dp</dimen>
+    <dimen name="width_32dp">32dp</dimen>
+    <dimen name="width_52dp">52dp</dimen>
+    <dimen name="width_250dp">250dp</dimen>
+
+    <!--Height-->
+    <dimen name="height_0dp">0dp</dimen>
+    <dimen name="height_32dp">32dp</dimen>
+    <dimen name="height_52dp">52dp</dimen>
+    <dimen name="height_250dp">250dp</dimen>
+
+    <!--Margin-->
+    <dimen name="margin_4dp">4dp</dimen>
+    <dimen name="margin_8dp">8dp</dimen>
+    <dimen name="margin_12dp">12dp</dimen>
+    <dimen name="margin_16dp">16dp</dimen>
+    <dimen name="margin_24dp">24dp</dimen>
+    <dimen name="margin_28dp">28dp</dimen>
+    <dimen name="margin_32dp">32dp</dimen>
+    <dimen name="margin_40dp">40dp</dimen>
+    <dimen name="margin_44dp">44dp</dimen>
+    <dimen name="margin_52dp">52dp</dimen>
+
+    <!--Padding-->
+    <dimen name="padding_2dp">2dp</dimen>
+    <dimen name="padding_4dp">4dp</dimen>
+    <dimen name="padding_8dp">8dp</dimen>
+    <dimen name="padding_9dp">9dp</dimen>
+    <dimen name="padding_12dp">12dp</dimen>
+    <dimen name="padding_24dp">24dp</dimen>
+
+    <!--Elevation-->
+    <dimen name="elevation_3dp">3dp</dimen>
+    <dimen name="elevation_4dp">4dp</dimen>
+    <dimen name="elevation_8dp">8dp</dimen>
+    <dimen name="elevation_10dp">10dp</dimen>
+
+    <!--Radius-->
+    <dimen name="radius_4dp">4dp</dimen>
+    <dimen name="radius_12dp">12dp</dimen>
+    <dimen name="radius_20dp">20dp</dimen>
+    <dimen name="radius_40dp">40dp</dimen>
+
+    <!--Miscellaneous-->
     <dimen name="dimen_bottom_nav_radius">20dp</dimen>
+    <dimen name="content_inset_12dp">12dp</dimen>
+    <dimen name="content_inset_16dp">16dp</dimen>
+
+    <!--Text Size-->
+    <dimen name="text_size_10sp">10sp</dimen>
+    <dimen name="text_size_12sp">12sp</dimen>
+    <dimen name="text_size_14sp">14sp</dimen>
+    <dimen name="text_size_16sp">16sp</dimen>
+    <dimen name="text_size_34sp">34sp</dimen>
+
 </resources>
